// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <button
    aria-labelledby=":r0:"
    class="size-[72px] rounded-full border border-transparent hover:ring hover:ring-purple-500 focus:outline-none focus:ring focus:ring-purple-500 focus:hover:border-none bg-[#f5f5f5]"
    type="button"
  >
    <span
      class="text-center text-5xl leading-6 text-[#4d5358]"
    >
      ☰
    </span>
  </button>
  <span
    class="text-sm font-normal"
    id=":r0:"
  >
    Default
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <button
    aria-labelledby=":r3:"
    class="size-[72px] rounded-full border border-transparent hover:ring hover:ring-purple-500 focus:outline-none focus:ring focus:ring-purple-500 focus:hover:border-none bg-[#f5f5f5]"
    type="button"
  >
    <span
      class="text-center text-5xl leading-6 text-[#4d5358]"
    >
      ☰
    </span>
  </button>
  <span
    class="text-sm font-normal"
    id=":r3:"
  >
    Disabled, non-selected
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <button
    aria-labelledby=":r2:"
    class="size-[72px] rounded-full border border-transparent hover:ring hover:ring-purple-500 focus:outline-none focus:ring focus:ring-purple-500 focus:hover:border-none bg-[#697077]"
    type="button"
  >
    <span
      class="text-center text-5xl leading-6 text-[#ffffff]"
    >
      ☰
    </span>
  </button>
  <span
    class="text-sm font-normal"
    id=":r2:"
  >
    Disabled, non-selected
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <button
    aria-labelledby=":r4:"
    class="size-[72px] rounded-full border border-transparent hover:ring hover:ring-purple-500 focus:outline-none focus:ring focus:ring-purple-500 focus:hover:border-none bg-[#697077]"
    type="button"
  >
    <span
      class="text-center text-5xl leading-6 text-[#ffffff]"
    >
      ☰
    </span>
  </button>
  <span
    class="text-sm font-normal"
    id=":r4:"
  >
    Disabled, non-selected
  </span>
</div>
`;

exports[`Snapshot testing > selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <button
    aria-labelledby=":r1:"
    class="size-[72px] rounded-full border border-transparent hover:ring hover:ring-purple-500 focus:outline-none focus:ring focus:ring-purple-500 focus:hover:border-none bg-[#697077]"
    type="button"
  >
    <span
      class="text-center text-5xl leading-6 text-[#ffffff]"
    >
      ☰
    </span>
  </button>
  <span
    class="text-sm font-normal"
    id=":r1:"
  >
    Selected
  </span>
</div>
`;
